feat: sync local updates

--- a/src/locales/en/assets.json
+++ b/src/locales/en/assets.json
@@ -2,12 +2,26 @@
   "title": "Asset Center",
   "subtitle": "TAI Financial Center - Real-time view of your assets and earnings",
   "balance": "TAI Balance",
+  "topBarHint": "Tap to inspect balance breakdown and flows",
   "usdt": "TAI/USDT",
   "change": "24h Change",
   "refresh": "Refresh",
+  "refreshing": "Refreshing...",
   "deposit": "Deposit",
   "withdraw": "Withdraw",
   "exchange": "Exchange",
+  "records": "Records",
+  "recordTitle": "Asset Records",
+  "recordSubtitle": "On-chain sync plus cached snapshot · Last 20 entries",
+  "recordEmpty": "No asset movements yet",
+  "recordDeposit": "Deposit settled",
+  "recordWithdraw": "Withdrawal sent",
+  "recordReward": "Prediction reward",
+  "recordGas": "Gas expense",
+  "recordRefresh": "Refresh records",
+  "taiDetailHint": "Keep at least 200 TAI to cover packets and predictions.",
+  "tonBalance": "TON Balance",
+  "tonDetailHint": "Reserve TON for gas and swaps to keep flows smooth.",
   "myRedPacket": "My Red Packets",
   "redPacketClaimed": "Claimed/Total",
   "claimRedPacket": "Claim Packet",
