--- a/src/locales/zh/assets.json
+++ b/src/locales/zh/assets.json
@@ -2,12 +2,26 @@
   "title": "资产中心",
   "subtitle": "TAI 财务中心，实时查看您的资产与收益",
   "balance": "TAI 余额",
+  "topBarHint": "单击查看余额详情与资金流向",
   "usdt": "TAI/USDT",
   "change": "24h 变化",
   "refresh": "刷新",
+  "refreshing": "刷新中...",
   "deposit": "充值",
   "withdraw": "提现",
   "exchange": "兑换",
+  "records": "记录",
+  "recordTitle": "资产记录",
+  "recordSubtitle": "链上同步 + 本地缓存，最近 20 笔",
+  "recordEmpty": "暂无资产变动记录",
+  "recordDeposit": "充值到账",
+  "recordWithdraw": "提现扣除",
+  "recordReward": "预测奖励",
+  "recordGas": "手续费支出",
+  "recordRefresh": "刷新记录",
+  "taiDetailHint": "支撑红包、预测赛道，建议保持 200 TAI 以上保障交易",
+  "tonBalance": "TON 余额",
+  "tonDetailHint": "用于支付 Gas 与兑换，保持充足可确保交易顺畅",
   "myRedPacket": "我的红包",
   "redPacketClaimed": "已领取/总份数",
   "claimRedPacket": "领取红包",
