--- a/src/locales/zh/dao.json
+++ b/src/locales/zh/dao.json
@@ -4,6 +4,88 @@
     "subtitle": "首页收益、陪审奖励、邀请返利全部回流 DAO 池，集中领取仅付一次 Gas",
     "tagline": "统一抽签 · 专注陪审"
   },
+  "status": {
+    "level": "陪审等级",
+    "points": "陪审积分",
+    "stake": "质押金额",
+    "accuracy": "投票准确率",
+    "remaining": "今日剩余次数",
+    "weight": "抽签权重",
+    "perCasePoints": "单次陪审积分",
+    "description": "完成争议/举报/超时裁决即可获得积分与奖励，质押越多积分越高。",
+    "times": "次",
+    "remainingUnlimited": "无限制",
+    "actions": {
+      "verify": "陪审员认证",
+      "stakeMore": "追加质押",
+      "exit": "申请退出"
+    }
+  },
+  "levelsTable": {
+    "columns": {
+      "level": "等级",
+      "points": "积分范围",
+      "title": "称号",
+      "cap": "每日裁定"
+    }
+  },
+  "actions": {
+    "hint": "集中领取仅需一次 Gas，剩余金额自动结算。",
+    "stakeMore": "追加质押",
+    "claimAll": "一键领取",
+    "exit": "申请退出",
+    "claimSuccessTitle": "领取成功",
+    "claimSuccessMessage": "已领取 {{amount}} TAI，交易哈希：{{txHash}}",
+    "claimFailedTitle": "领取失败",
+    "stakeSuccess": "质押成功",
+    "unstakeSuccess": "解除质押成功",
+    "balanceUpdate": "可用：{{available}} TAI｜锁仓：{{locked}} TAI",
+    "stakeFailedTitle": "操作失败",
+    "verifySubmittedTitle": "认证已提交",
+    "verifySubmittedMessage": "团队将在 24 小时内完成审核，请保持在线。",
+    "verifyFailedTitle": "认证提交失败",
+    "invalidAmountTitle": "金额不合法",
+    "invalidAmountMessage": "请输入大于 0 的数值"
+  },
+  "earnings": {
+    "totalPool": "DAO 奖励池",
+    "totalPoolHint": "包含预测手续费与申诉保证金，自动注入。",
+    "pending": "待领取收益",
+    "pendingHint": "平台代付 Gas，一键领取后次日重置。",
+    "today": "今日新增",
+    "week": "近 7 日",
+    "reserve": "储备金"
+  },
+  "modals": {
+    "common": {
+      "cancel": "取消",
+      "processing": "处理中...",
+      "ok": "好的"
+    },
+    "stake": {
+      "title": "质押管理",
+      "subtitle": "质押 TAI 即可加入陪审权重，提高抽签概率",
+      "tabStake": "追加质押",
+      "tabUnstake": "解除质押",
+      "amount": "质押数量",
+      "hint": "当前可用 {{available}} TAI · 锁仓 {{locked}} TAI",
+      "confirm": "确认质押"
+    },
+    "unstake": {
+      "tabUnstake": "解除质押",
+      "confirm": "确认解除"
+    },
+    "verify": {
+      "title": "陪审员认证",
+      "subtitle": "提交联系信息并锁定 10,000 TAI 以上即可加入陪审池",
+      "description": "请填写可联系到你的 Telegram，审核通过后将收到通知。",
+      "noteLabel": "补充说明",
+      "notePlaceholder": "例如：擅长宏观、链游等话题，常驻时区 UTC+8...",
+      "alreadyJuror": "你已完成陪审认证，可继续追加质押提升权重。",
+      "requirements": "需锁定 ≥10,000 TAI 且保持 Telegram 可联系，请确保信息真实有效。",
+      "confirm": "提交认证"
+    }
+  },
   "pool": {
     "total": "DAO 总池"
   },
@@ -31,13 +113,15 @@
   },
   "levels": {
     "title": "等级体系",
-    "description": "陪审、创建、邀请均可累积点数，达成即自动升级。",
+    "description": "仅陪审参与可累积点数，质押越多积分越高。",
     "items": [
-      "0 - 9 点：灰色锤（陪审候选）",
-      "10 - 49 点：铜色锤（陪审正式）",
-      "50 - 199 点：银色锤（高级陪审）",
-      "200 点以上：金色锤（DAO 委员）"
+      "0 - 99 点：武林新丁 🥋 (每日3次)",
+      "100 - 399 点：风尘奇侠 🗡️🌪️ (每日9次)",
+      "400 - 999 点：地狱判官 ⚔️👹 (每日30次)",
+      "1000 点以上：天上天下天地无双 ⚡👑 (无限制)"
     ],
+    "pointsRule": "基础 +1 分，质押倍数加成最高 10 倍",
+    "stakeMultiplier": "质押倍数 = 实际质押 / 10,000 TAI",
     "claimed": "已经领取",
     "pending": "待领取",
     "total": "总收益"
@@ -45,9 +129,153 @@
   "jury": {
     "title": "GameDAO 陪审员",
     "description": "质押 ≥ 1000 TAI 即可加入陪审团，权重 = (点数 + 10) × 质押额 · 每日抽签上限 4 次。",
-    "note": "与多数同侧分享奖池 1% + 创建赏金，异侧将销毁 10% 质押。",
+    "note": "参与陪审可获得奖池 1% 分成，每次陪审 +1 积分。",
     "cta": "成为陪审员",
     "comingSoon": "质押流程将在主网发布时开放，敬请期待。"
   },
-  "autoClaim": "自动领取陪审团奖励"
+  "autoClaim": "自动领取陪审团奖励",
+  "tasks": {
+    "title": "进行中的陪审任务",
+    "pending": "待处理",
+    "review": "审核中",
+    "closed": "已完成",
+    "pool": "奖池",
+    "jurors": "陪审人数",
+    "reward": "预估奖励",
+    "points": "积分收益",
+    "remaining": "剩余时间",
+    "people": "人",
+    "actions": {
+      "view": "查看详情",
+      "vote": "立即投票"
+    },
+    "goAppeals": "进入申诉中心",
+    "empty": "暂无陪审任务，稍后再来。"
+  },
+  "taskDetail": {
+    "notFound": "未找到对应任务",
+    "breadcrumb": "陪审任务 · Detail",
+    "overview": "案件概览",
+    "placeholder": "案件详情与链上证据将在真实环境载入，这里展示占位文案用于界面预览。",
+    "back": "返回任务列表",
+    "raiseAppeal": "发起申诉",
+    "myVote": "我的投票",
+    "optionA": "选项 A",
+    "optionB": "选项 B",
+    "invalid": "无效",
+    "reason": "投票理由",
+    "reasonPlaceholder": "说明你的裁定逻辑，帮助提高准确率并保护自身权益。",
+    "submitWithVote": "提交投票 · {{vote}}",
+    "submitDisabled": "请先选择投票选项",
+    "jurors": "陪审员列表",
+    "onchainSynced": "链上实时同步",
+    "voteChoice": "投票选项",
+    "points": "积分",
+    "accuracy": "准确率",
+    "copy": "复制地址"
+  },
+  "appeals": {
+    "createTab": "发起申诉",
+    "recordsTab": "申诉记录",
+    "createTitle": "提交新的申诉请求",
+    "depositHint": "保证金 10,000 TAI · 审核后退回",
+    "selectPrediction": "目标预测",
+    "searchPlaceholder": "输入预测标题或 ID",
+    "target": "申诉对象",
+    "targetSingle": "单陪审员",
+    "targetAll": "全体陪审员",
+    "reason": "申诉理由",
+    "reasonPlaceholder": "请详述争议点、链上证据或截图链接。",
+    "evidence": {
+      "image": "上传截图",
+      "video": "上传视频",
+      "link": "添加链接"
+    },
+    "submit": "提交申诉",
+    "status": {
+      "pending": "审核中",
+      "approved": "已通过",
+      "rejected": "已驳回"
+    },
+    "targetLabel": "申诉对象",
+    "amount": "赔偿金额：{{amount}} TAI",
+    "viewDetail": "查看详情"
+  },
+  "withdraw": {
+    "title": "陪审退出流程",
+    "subtitle": "退出前请确认所有任务、申诉与收益均已结清",
+    "description": "退出后锁定期结束即可领取质押，请确保无未完成任务。",
+    "checklistTitle": "状态检查",
+    "checklist": {
+      "stake": "当前质押",
+      "points": "陪审积分",
+      "pendingTasks": "未完成任务",
+      "appeals": "待处理申诉"
+    },
+    "timeline": "预计到账时间",
+    "time": {
+      "instant": "即时",
+      "twentyFour": "24 小时",
+      "seventyTwo": "72 小时"
+    },
+    "timeHint": {
+      "instant": "条件满足可立即到账",
+      "twentyFour": "大部分用户 24 小时内完成",
+      "seventyTwo": "存在争议或申诉时延后"
+    },
+    "stepsTitle": "退出步骤",
+    "steps": [
+      "提交退出申请，进入冷静期",
+      "系统检查未完成任务与申诉",
+      "退出成功后自动提现至钱包"
+    ],
+    "cta": {
+      "confirm": "确认退出",
+      "cancel": "取消"
+    }
+  },
+  "createLimits": {
+    "title": "积分规则",
+    "description": "根据陪审积分解锁预测创建频率与陪审名额。",
+    "openRules": "查看积分规则",
+    "table": {
+      "points": "积分",
+      "title": "称号",
+      "create": "创建/次",
+      "jury": "陪审/日"
+    },
+    "levels": {
+      "normal": {
+        "points": "普通用户",
+        "title": "--",
+        "create": "360 小时",
+        "jury": "不可陪审"
+      },
+      "l1": {
+        "points": "0-99",
+        "title": "武林新丁",
+        "create": "72 小时",
+        "jury": "3 次"
+      },
+      "l2": {
+        "points": "100-399",
+        "title": "风尘奇侠",
+        "create": "48 小时",
+        "jury": "9 次"
+      },
+      "l3": {
+        "points": "400-999",
+        "title": "地狱判官",
+        "create": "24 小时",
+        "jury": "30 次"
+      },
+      "l4": {
+        "points": "1000+",
+        "title": "天上天下天地无双",
+        "create": "6 小时",
+        "jury": "无限制"
+      }
+    },
+    "note": "创建预测需支付 100 TAI（可自定义 100-10000 TAI 奖励）及 TON 链上 Gas 费。"
+  }
 }
