--- a/src/locales/en/detail.json
+++ b/src/locales/en/detail.json
@@ -42,6 +42,7 @@
   "historyColumns": {
     "amount": "Stake",
     "side": "Side",
+    "payout": "Payout",
     "time": "When",
     "user": "Trader"
   },
@@ -57,8 +58,7 @@
     "amountError": "Enter at least 1 TAI",
     "cancel": "Cancel",
     "confirm": "Confirm",
-    "note": "Memo",
-    "noteError": "Memo too long",
+    "genericError": "Something went wrong. Please try again.",
     "success": "Bet queued",
     "title": "Send bet"
   },
@@ -97,5 +97,22 @@
   "trend": {
     "down": "Cooling",
     "up": "Rising"
+  },
+  "myPosition": {
+    "title": "My position",
+    "subtitle": "Track what this wallet has placed on this market",
+    "wallet": "Wallet: {{address}}",
+    "connectHint": "Connect TonConnect to see and manage your bets.",
+    "empty": "You haven't placed a bet on this market yet. Pick a side and confirm to join.",
+    "side": "Side",
+    "amount": "Stake",
+    "payout": "Estimated payout",
+    "profit": "Projected profit",
+    "count": "{{count}} bets placed with this wallet"
+  },
+  "activity": {
+    "title": "Latest activity",
+    "subtitle": "Live feed · Showing {{count}} most recent",
+    "empty": "No bets yet — be the first one to join."
   }
 }
